k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petflow-api-service
spec:
  type: ClusterIP
  selector:
    app: petflow-api
  ports:
    - port: 80
      targetPort: 5000
